--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,15 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      // "ngx-route-highlighter": [
+      //   "dist/ngx-route-highlighter"
+      // ],
+      // "ngx-route-highlighter/*": [
+      //   "dist/ngx-route-highlighter/*"
+      // ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
