--- a/projects/ngx-route-highlighter/package.json
+++ b/projects/ngx-route-highlighter/package.json
@@ -1,8 +1,31 @@
 {
   "name": "ngx-route-highlighter",
-  "version": "0.0.1",
+  "author": {
+    "name": "Parth Jansari",
+    "email": "parthjansari@outlook.com",
+    "url": "https://github.com/parth181195/"
+  },
+  "keywords": [
+    "Angular",
+    "js",
+    "links",
+    "ragex",
+    "class"
+  ],
+  "version": "0.0.3",
   "peerDependencies": {
     "@angular/common": "^8.1.3",
     "@angular/core": "^8.1.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/parth181195/ngx-route-highlighter.git"
+  },
+  "description": "very basic package to add classes to a package when you are on a perticular route",
+  "homepage": "https://github.com/parth181195/ngx-route-highlighter/README.md",
+  "bugs": {
+    "url": "https://github.com/parth181195/ngx-route-highlighter/issues",
+    "email": "parthjansari@outlook.com"
+  },
+  "license": "MIT"
 }
